<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuickCall">

    <include layout="@layout/actionbar_home"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fr_mom"
            android:background="@drawable/bg_radius"
            android:backgroundTint="#786835"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:tag="@string/phone_mom">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/call1"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_mom"
                android:textColor="@color/black"
                android:textSize="40sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fr_dad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_radius"
            android:backgroundTint="#C63B31"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:tag="@string/phone_dad">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/call2"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_dad"
                android:textColor="@color/black"
                android:textSize="40sp" />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/fr_crush"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_radius"
            android:backgroundTint="#89C147"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:tag="@string/phone_crush">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/call3"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_crush"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/fr_best_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_radius"
            android:backgroundTint="#B656C6"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:tag="@string/phone_best_friend">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/call4"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_best_friend"
            android:textColor="@color/black"
            android:textSize="40sp" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>